--- a/releases/net/minidev/json-smart/2.2.1-b-SNAPSHOT/pom.xml
+++ b/releases/net/minidev/json-smart/2.2.1-b-SNAPSHOT/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>erav.net.minidev</groupId>
   <artifactId>json-smart</artifactId>
-  <version>2.2.1-a-SNAPSHOT</version>
+  <version>2.2.1-b-SNAPSHOT</version>
   <dependencies>
          <dependency>
             <groupId>junit</groupId>
